GT-2922 corrected FunctionDefinition issue and related merge bug